[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbus"
version = "0.0.1"
authors = [
  { name="Samarth Nimbargi", email="nimbargisamarth@gmail.com" },
]
description = "AWS Modules"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "Boto3",
    "AWS",
]

[project.urls]
"Homepage" = "https://github.com/samarth4445/nimbus.git"
